installation/run-app/deploymentB/deploymentB.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-b
  namespace: default
  labels:
    app: deploy-b
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deploy-b
  template:
    metadata:
      labels:
        app: deploy-b
    spec:
      containers:
      - name: deploy-b
        image: vudinhdai2505/test-app:v5
        resources:
          limits:
            cpu: "950m"
        ports:
        - containerPort: 5000
      terminationGracePeriodSeconds: 5
