installation/run-app/deploymentB/svc-deploymentB.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-b
  namespace: default
spec:
  type: NodePort
  selector:
    app: deploy-b
  ports:
  - port: 5000
    targetPort: 5000
